--- a/auralink/libraries/ui/CMakeLists.txt
+++ b/auralink/libraries/ui/CMakeLists.txt
@@ -5,6 +5,12 @@ SET(SOURCES ui_comp_wifiicon.c
     ui_comp_hook.c
     ui_helpers.c
     ui_img_wifiicon_png.c
-    ui_img_chargingicon_png.c)
+    ui_img_chargingicon_png.c
+    ui_img_light_png.c
+    ui_img_aq_png.c
+    ui_img_rh_png.c
+    ui_img_temperature_png.c
+    ui_img_pressure_png.c
+    ui_img_sound_png.c)
 
 add_library(ui ${SOURCES})
