Update AuraLink configuration for air quality monitoring
- Changed GUIDs and labels from "Illumination" to "Air Quality" throughout the configuration.
- Updated image assets to reflect air quality metrics, including new assets for air quality and temperature.
- Adjusted positions and scales for various UI elements to better fit the new theme.
- Added new backup files for versioning.
- Increased backup count to maintain a history of changes.

--- a/auralink/libraries/ui/CMakeLists.txt
+++ b/auralink/libraries/ui/CMakeLists.txt
@@ -10,11 +10,11 @@ SET(SOURCES ui_comp_notificationbar.c
     ui_img_sub_png.c
     ui_img_wifiicon_png.c
     ui_img_chargingicon_png.c
-    ui_img_light_png.c
     ui_img_aq_png.c
-    ui_img_rh_png.c
     ui_img_temperature_png.c
     ui_img_pressure_png.c
-    ui_img_sound_png.c)
+    ui_img_rh_png.c
+    ui_img_light_png.c
+    ui_img_uv_png.c)
 
 add_library(ui ${SOURCES})
